# deltachat-core-rust

./: .gitattributes  .gitignore  .npmignore  ASYNC-API-TODO.txt  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Pipfile  README.md  RELEASE.md  STYLE.md  Xargo.toml  appveyor.yml  build.rs  cliff.toml  deny.toml  diff  flake.nix  foo-shm  foo-wal  misc.c  misc.h  package.json  release-date.in  run-integration-tests.sh  rust-toolchain  set_core_version.py  spec.md  standards.md  test-db-run-repl.sh  update-proviers-list.sh  web30.md  webxdc-dev.xdc  webxdc.md
.cargo/: config.toml
.circleci/: config.yml
.github/: dependabot.yml  mergeable.yml
assets/: exported-chat.css  qr_overlay_delta.svg-part  webxdc-dev.xdc  webxdc_logging.xdc
benches/: contacts.rs  create_account.rs  get_chat_msgs.rs  get_chatlist.rs  marknoticed_chat.rs  receive_emails.rs  search_msgs.rs  send_events.rs
ci/: run.sh
ci_scripts/: README.md  ci_run.sh  ci_upload.sh  cleanup_devpi_indices.py  gh-actions-rust.yml  manual_remote_tests.sh  remote_python_packaging.sh  remote_tests.sh  remote_tests_python.sh  remote_tests_rust.sh  run-doxygen.sh  run-python-test.sh  run-python.sh  run-rust-test.sh  run_all.sh
deltachat-contact-tools/: Cargo.toml
deltachat-contact-tools/src/: lib.rs
deltachat-contact-utils/: Cargo.toml
deltachat-ffi/: .gitignore  Cargo.toml  Doxyfile  Doxyfile.css  DoxygenLayout.xml  README.md  bindings.h  build.rs  cbindgen.toml  deltachat.h  deltachat.pc.in
deltachat-ffi/src/: dc_array.rs  lib.rs  lot.rs  providers.rs  string.rs  tools.rs
deltachat-jsonrpc/: .gitignore  Cargo.toml  README.MD  README.md  TODO.md
deltachat-jsonrpc/openrpc/: openrpc.json
deltachat-jsonrpc/src/: api.rs  lib.rs  webserver.rs
deltachat-jsonrpc/src/api/: events.rs  mod.rs
deltachat-jsonrpc/src/api/types/: account.rs  chat.rs  chat_list.rs  contact.rs  events.rs  http.rs  location.rs  login_param.rs  message.rs  message_parser.rs  mod.rs  provider_info.rs  qr.rs  reactions.rs  webxdc.rs
deltachat-jsonrpc/typescript/: .gitignore  .npmignore  .prettierignore  Readme.md  deltachat.ts  example.html  example.ts  index.html  node-demo.js  package.json  report_api_coverage.mjs  tsconfig.json
deltachat-jsonrpc/typescript/example/: example.ts  node-add-account.js  node-demo.js
deltachat-jsonrpc/typescript/scripts/: generate-constants.js
deltachat-jsonrpc/typescript/src/: client.ts  events.ts  lib.ts
deltachat-jsonrpc/typescript/test/: README.md  basic.ts  online.ts  test_base.ts  ts_helpers.ts  tsconfig.json
deltachat-ratelimit/: Cargo.toml
deltachat-repl/: Cargo.toml  README.md
deltachat-repl/src/: cmdline.rs  main.rs
deltachat-rpc-client/: README.md  bug.py  pyproject.toml  tox.ini
deltachat-rpc-client/examples/: echobot.py  echobot_advanced.py  echobot_async.py  echobot_no_hooks.py
deltachat-rpc-client/src/deltachat_rpc_client/: __init__.py  _generated_types.py  _utils.py  account.py  chat.py  client.py  const.py  contact.py  deltachat.py  direct_imap.py  events.py  message.py  py.typed  pytestplugin.py  rpc.py  utils.py
deltachat-rpc-client/tests/: conftest.py  run-iroh-example.py  test_account_events.py  test_chatlist_events.py  test_iroh_webxdc.py  test_key_transfer.py  test_securejoin.py  test_something.py  test_vcard.py  test_webxdc.py  test_webxdc_iroh.py
deltachat-rpc-server/: Cargo.toml  README.md
deltachat-rpc-server/npm-package/: .gitignore  .npmignore  README.md  Readme.md  build_platform_package.py  index.d.ts  index.js  package.json  update_optional_dependencie_and_version.js
deltachat-rpc-server/npm-package/scripts/: build_platform_package.py  make_local_dev_version.py  pack_binary_for_platform.py  update_optional_dependencies_and_version.js
deltachat-rpc-server/npm-package/scripts/src/: convert_platform.py  make_package.py
deltachat-rpc-server/npm-package/src/: const.js  errors.js
deltachat-rpc-server/src/: main.rs
deltachat-time/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dateparse.rs  fuzz_format_flowed.rs  fuzz_mailparse.rs  fuzz_simplify.rs
mmime/: Cargo.toml  README.md
mmime/.circleci/: config.yml
mmime/src/: charconv.rs  chash.rs  clist.rs  constants.rs  display.rs  lib.rs  mailimf.rs  mailimf_types.rs  mailimf_types_helper.rs  mailimf_write_generic.rs  mailmime.rs  mailmime_content.rs  mailmime_decode.rs  mailmime_disposition.rs  mailmime_types.rs  mailmime_types_helper.rs  mailmime_write_generic.rs  mailmime_write_mem.rs  mmapstring.rs  other.rs
mmime/src/mailimf/: mod.rs  types.rs  types_helper.rs  write_generic.rs
mmime/src/mailmime/: content.rs  decode.rs  disposition.rs  mod.rs  types.rs  types_helper.rs  write_generic.rs  write_mem.rs
python/: .gitignore  CHANGELOG  MANIFEST.in  README.rst  fail_test.py  install_py_bindings.sh  install_python_bindings.py  liveconfig3  mypy.ini  pyproject.toml  s2  setup.cfg  setup.py  tox.ini  x.py
python/doc/: Makefile  api.rst  capi.rst  changelog.rst  conf.py  examples.rst  index.rst  lapi.rst  links.rst  plugins.rst
python/doc/_static/: custom.css
python/doc/_templates/: globaltoc.html  sidebarintro.html
python/doc/cffi/: api.rst  examples.rst  install.rst  intro.rst  lapi.rst  manylinux.rst  tests.rst
python/doc/jsonrpc/: develop.rst  examples.rst  install.rst  intro.rst  reference.rst
python/examples/: conftest.py  echo_and_quit.py  group_tracking.py  test_examples.py
python/src/: direct_imap.py
python/src/deltachat/: __init__.py  _build.py  account.py  chat.py  chatting.py  const.py  contact.py  cutil.py  direct_imap.py  eventlogger.py  events.py  hookspec.py  iothreads.py  message.py  props.py  provider.py  reactions.py  testplugin.py  tracker.py
python/tests/: auditwheels.py  bench_test_setup.py  conftest.py  ffi_event.py  package_wheels.py  real_providers.py  stress_test_db.py  test_0_complex_or_slow.py  test_1_online.py  test_2_increation.py  test_3_offline.py  test_4_lowlevel.py  test_5_simulation.py  test_account.py  test_direct_imap.py  test_increation.py  test_lowlevel.py  test_provider_info.py
python/tests/data/: key
(+853 files in other folders)
