[package]
name = "deltachat-jsonrpc"
version = "1.157.2"
description = "DeltaChat JSON-RPC API"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/chatmail/core"

[dependencies]
anyhow = { workspace = true }
deltachat = { workspace = true }
deltachat-contact-tools = { workspace = true }
num-traits = { workspace = true }
schemars = "0.8.22"
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
log = { workspace = true }
async-channel = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
yerpc = { workspace = true, features = ["anyhow_expose", "openrpc"] }
typescript-type-def = { version = "0.5.13", features = ["json_value"] }
tokio = { workspace = true }
sanitize-filename = { workspace = true }
walkdir = "2.5.0"
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "rt-multi-thread"] }


[features]
default = ["vendored"]
vendored = ["deltachat/vendored"]
