[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deltachat-rpc-client"
description = "Python client for Delta Chat core JSON-RPC interface"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Email"
]
dynamic = [
    "version"
]

[tool.setuptools.package-data]
deltachat_rpc_client = [
    "py.typed"
]

[project.entry-points.pytest11]
"deltachat_rpc_client.pytestplugin" = "deltachat_rpc_client.pytestplugin"

[tool.setuptools_scm]
root = ".."

[tool.black]
line-length = 120

[tool.ruff]
select = [
  "E", "W", # pycodestyle
  "F", # Pyflakes
  "N", # pep8-naming
  "I", # isort

  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "DTZ", # flake8-datetimez
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TID", # flake8-tidy-imports
  "YTT", # flake8-2020

  "ERA", # eradicate

  "PLC", # Pylint Convention
  "PLE", # Pylint Error
  "PLW", # Pylint Warning

  "RUF006" # asyncio-dangling-task
]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = true
